Fix N+1 problem, Add task-category